# DBT_PFL_Statistics

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .sqlfluff  .sqlfluffignore  Makefile  README.md  commands.txt  dbt_project.yml  ddfgdfg.ipynb  pyproject.toml  requirements.in  requirements.txt  scraper.py
.github/workflows/: dbt.yml
airflow/dags/: ingest_premier_league_season.py
dbt/: .user.yml  profiles.yml
dbt/macros/: normalise_club.sql  normalise_countries.sql  surrogate_key_v1.sql
dbt/models/: exposures.yml  schema.yml
dbt/models/marts/: dim_clubs.sql  dim_countries.sql  dim_players.sql  fct_transfers.sql  fct_transfers_enriched.sql  mart_example.sql  marts__schema.yml
dbt/models/sources/: raw.yml
dbt/models/staging/: staging__schema.yml  stg_club_countries.sql  stg_club_country_map.sql  stg_clubs_map.sql  stg_countries.sql  stg_example.sql  stg_players.sql  stg_transfer_data.sql  stg_transfers.sql  stg_transfers_compat.sql  stg_unmapped_clubs.sql
dbt/seeds/: FPL_Transfers_23_24.csv  country_of_clubs.csv  example.csv
dbt/seeds/split_files/: premier_league_1992.csv  premier_league_1993.csv  (+29 more)
dbt/snapshots/: players_snapshot.sql
python_scripts/: clean_file_working_out.ipynb  parse_my_file.ipynb  plt.duckdb.wal  read_and_add_country_to_other_file.ipynb  read_duckdb_file.ipynb  rename_staging_raw_fl_table_to_raw_transfers.ipynb  split_files_2.ipynb
python_scripts/my_file/: parse_my_file.ipynb
python_scripts/other_file/: clean_file_working_out.ipynb  parse_clubs.ipynb  split_files_into years.ipynb
warehouse/: plt.duckdb
(+2 files in other folders)
